# ComfyUI-Wan22ResolutionPresets

./: README  __init__.py  pyproject.toml
web/: resolution_selector.js
